# internal/dips/api/gen/di_ps/service.go
@@ -18,9 +18,9 @@ import (
 // The DIPs service requests DIP creation and retrieves DIP details.
 type Service interface {
 	// The create method requests DIP creation for a document key.
-	Create(context.Context, *CreatePayload) (res *CreateDIPResult, err error)
+	Create(context.Context, *CreatePayload) (res *CreateResult, err error)
 	// The show method retrieves DIP details.
-	Show(context.Context, *ShowPayload) (res *DIP, err error)
+	Show(context.Context, *ShowPayload) (res *ShowResult, err error)
 }
 
 // Auther defines the authorization functions to be implemented by the service.
@@ -45,10 +45,21 @@ const ServiceName = "DIPs"
 // MethodKey key.
 var MethodNames = [2]string{"create", "show"}
 
-// CreateDIPResult is the result type of the DIPs service create method.
-type CreateDIPResult struct {
-	// The id field contains the identifier assigned to the DIP.
-	ID DIPID
+// BadRequestProblem represents an invalid request problem.
+type BadRequestProblem struct {
+	// The type field contains a URI reference that identifies the problem type.
+	Type string
+	// The title field contains a short, human-readable summary of the problem type.
+	Title string
+	// The detail field contains a human-readable explanation specific to this
+	// problem occurrence.
+	Detail string
+	// The status field contains the HTTP status code generated by the origin
+	// server.
+	Status int32
+	// The instance field contains a URI reference that identifies this problem
+	// occurrence.
+	Instance *string
 }
 
 // CreatePayload is the payload type of the DIPs service create method.
@@ -59,22 +70,10 @@ type CreatePayload struct {
 	DocKey DocKey
 }
 
-// DIP is the result type of the DIPs service show method.
-type DIP struct {
-	// The id field uniquely identifies the DIP.
+// CreateResult is the result type of the DIPs service create method.
+type CreateResult struct {
+	// The id field contains the identifier assigned to the DIP.
 	ID DIPID
-	// The docKey field contains the document key used to create the DIP.
-	DocKey DocKey
-	// The status field contains the current DIP status.
-	Status DIPStatus
-	// The created_at field contains the time when the DIP was requested.
-	CreatedAt DateTime
-	// The started_at field contains the time when DIP processing started.
-	StartedAt *DateTime
-	// The completed_at field contains the time when DIP processing completed.
-	CompletedAt *DateTime
-	// The object_key field contains the object store key for the completed DIP.
-	ObjectKey *ObjectKey
 }
 
 // DIPID uniquely identifies a DIP.
@@ -89,8 +88,8 @@ type DateTime string
 // DocKey is the document key used to create a DIP.
 type DocKey string
 
-// InternalProblem represents an unexpected server problem.
-type InternalProblem struct {
+// InternalServerErrorProblem represents an unexpected server problem.
+type InternalServerErrorProblem struct {
 	// The type field contains a URI reference that identifies the problem type.
 	Type string
 	// The title field contains a short, human-readable summary of the problem type.
@@ -123,23 +122,6 @@ type NotFoundProblem struct {
 	Instance *string
 }
 
-// NotValidProblem represents an invalid request problem.
-type NotValidProblem struct {
-	// The type field contains a URI reference that identifies the problem type.
-	Type string
-	// The title field contains a short, human-readable summary of the problem type.
-	Title string
-	// The detail field contains a human-readable explanation specific to this
-	// problem occurrence.
-	Detail string
-	// The status field contains the HTTP status code generated by the origin
-	// server.
-	Status int32
-	// The instance field contains a URI reference that identifies this problem
-	// occurrence.
-	Instance *string
-}
-
 // ObjectKey represents the object store key for a DIP.
 type ObjectKey string
 
@@ -149,6 +131,24 @@ type ShowPayload struct {
 	Token string
 	// The id field contains the DIP identifier.
 	ID DIPID
+}
+
+// ShowResult is the result type of the DIPs service show method.
+type ShowResult struct {
+	// The id field uniquely identifies the DIP.
+	ID DIPID
+	// The docKey field contains the document key used to create the DIP.
+	DocKey DocKey
+	// The status field contains the current DIP status.
+	Status DIPStatus
+	// The created_at field contains the time when the DIP was requested.
+	CreatedAt DateTime
+	// The started_at field contains the time when DIP processing started.
+	StartedAt *DateTime
+	// The completed_at field contains the time when DIP processing completed.
+	CompletedAt *DateTime
+	// The object_key field contains the object store key for the completed DIP.
+	ObjectKey *ObjectKey
 }
 
 // UnauthorizedProblem represents an authentication problem.
@@ -169,20 +169,37 @@ type UnauthorizedProblem struct {
 }
 
 // Error returns an error description.
-func (e *InternalProblem) Error() string {
-	return "InternalProblem represents an unexpected server problem."
+func (e *BadRequestProblem) Error() string {
+	return "BadRequestProblem represents an invalid request problem."
 }
 
 // ErrorName returns the error name.
 //
 // Deprecated: Use GoaErrorName - https://github.com/goadesign/goa/issues/3105
-func (e *InternalProblem) ErrorName() string {
+func (e *BadRequestProblem) ErrorName() string {
 	return e.GoaErrorName()
 }
 
 // GoaErrorName returns the error name.
-func (e *InternalProblem) GoaErrorName() string {
-	return "internal_error"
+func (e *BadRequestProblem) GoaErrorName() string {
+	return "bad_request"
+}
+
+// Error returns an error description.
+func (e *InternalServerErrorProblem) Error() string {
+	return "InternalServerErrorProblem represents an unexpected server problem."
+}
+
+// ErrorName returns the error name.
+//
+// Deprecated: Use GoaErrorName - https://github.com/goadesign/goa/issues/3105
+func (e *InternalServerErrorProblem) ErrorName() string {
+	return e.GoaErrorName()
+}
+
+// GoaErrorName returns the error name.
+func (e *InternalServerErrorProblem) GoaErrorName() string {
+	return "internal_server_error"
 }
 
 // Error returns an error description.
@@ -200,23 +217,6 @@ func (e *NotFoundProblem) ErrorName() string {
 // GoaErrorName returns the error name.
 func (e *NotFoundProblem) GoaErrorName() string {
 	return "not_found"
-}
-
-// Error returns an error description.
-func (e *NotValidProblem) Error() string {
-	return "NotValidProblem represents an invalid request problem."
-}
-
-// ErrorName returns the error name.
-//
-// Deprecated: Use GoaErrorName - https://github.com/goadesign/goa/issues/3105
-func (e *NotValidProblem) ErrorName() string {
-	return e.GoaErrorName()
-}
-
-// GoaErrorName returns the error name.
-func (e *NotValidProblem) GoaErrorName() string {
-	return "not_valid"
 }
 
 // Error returns an error description.
